2957: ensure greater padding so menu doesn't invoke second vertical scrollbar (#2971)

--- a/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -31,7 +31,7 @@
 }
 #gradebookHorizontalOverflowWrapper {
   width: 100%;
-  padding-bottom: 120px;
+  padding-bottom: 160px;
   overflow: auto;
   position: relative;
   -webkit-overflow-scrolling: touch;
